update: add endpoint for register user, active account by email
